--- a/openci-platform-web/src/main/webapp/pages/cis/project-detail.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/project-detail.html
@@ -75,7 +75,7 @@
 					</div>
 					<div class="form-group">
 						<div class="panel panel-default">
-						  <div class="panel-heading">集成工具</div>
+						  <div class="panel-heading">工具整合情况</div>
 						  <div class="panel-body tools" id="tools">
 						    	
 						 </div>
