--- a/openci-platform-web/src/main/webapp/pages/cis/project-list.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/project-list.html
@@ -4,11 +4,22 @@
 		var columns = [{
 			title : '项目名称',
 			name : 'name',
-			width : 210
+			width : 150
 		}, {
+			title : '开发者',
+			name : 'developers',
+			width : 250,
+			render : function(item, name, index) {
+				var developers = [];
+				$.each(item[name], function() {
+					developers.push(this.developer.name);
+				});
+				return developers.join(',');
+			}
+		},{
 			title : '集成工具',
 			name : 'tools',
-			width : 380,
+			width : 230,
 			render : function(item, name, index) {
 				var tools = [];
 				$.each(item[name], function() {
@@ -28,7 +39,7 @@
 					case 'INTEGRATION_TOOL_FAILURE':
 						return '<span class="glyphicon glyphicon-remove" style="color:#D9534F;"></span>';
 					case 'INTEGRATION_TOOL':
-						return '<div class="progress progress-striped active" style="margin-bottom:0;" title="正在整合工具" data-value="' + item.id + '"><div class="progress-bar" style="width: 100%"></div></div>';
+						return '<div id="projectStatus'+item.id+'" onclick="showProjectMsg('+item.id+')"><img alt="正在整合工具" src="images/loading.gif" style="width: 35px; height:35px;"></img></div>';
 					default:
 						return item[name]
 				}
@@ -36,11 +47,11 @@
 		}, {
 			title : '创建时间',
 			name : 'projectCreateDate',
-			width : 140
+			width : 125
 		}, {
 			title : '操作',
 			name : 'projectSavePath',
-			width : 150,
+			width : 200,
 			render : function(item, name, index) {
 				return '<button class="btn btn-primary" type="button" onclick="showProjectDetail(' + item.id + ')"><span class="glyphicon glyphicon-search"><span>详细</button>&nbsp;&nbsp;&nbsp;<button class="btn btn-danger" type="button" onclick="deleteProject(' + item.id + ')"><span class="glyphicon glyphicon-remove"><span>删除</button>';
 			}
@@ -53,26 +64,43 @@
 				value : 'name'
 			}],
 			url : 'project/pagingquery'
-		}).on('complate', function() {
-			$(this).find('.progress').each(function() {
-				var $td = $(this).closest('td');
-				var id = $(this).data('value');
-				var intervalId = setInterval(function() {
-					$.get('project/detail/' + id).done(function(data) {
-						var projectStatus = data.projectStatus
-						if (projectStatus == 'SUCCESS') {
-							$td.html('<span class="glyphicon glyphicon-ok" style="color:#5CB85C;"></span>');
-							clearInterval(intervalId);
-						} else if (projectStatus == 'INTEGRATION_TOOL_FAILURE') {
-							$td.html('<span class="glyphicon glyphicon-remove" style="color:#D9534F;"></span>');
-							clearInterval(intervalId);
-						}
-					});
-				}, 2000);
-			});
 		});
 	});
 
+	var showProjectMsg = function(id){
+		$.get('pages/cis/project-real-time.html').done(function(data) {
+			var dialog = $(data);
+			dialog.modal({
+				keyboard: false
+			}).on('hidden.bs.modal', function(){
+				$(this).remove();
+			});
+			var modalBody = dialog.find('.modal-body');
+			var intervalId = setInterval(function(){
+				$.get('project/process/'+id).done(function(result){
+					if(result == '整合完成!'){
+						clearInterval(intervalId);
+						$.get('project/detail/' + id).done(function(project) {
+							var projectStatus = $('#projectGrid').find('#projectStatus'+id).closest('td');
+							switch(project.projectStatus) {
+								case 'SUCCESS':
+									projectStatus.html('<span style="font-weight:bold; color:#5CB85C;">创建成功</span>');
+									break;
+								case 'INTEGRATION_TOOL_FAILURE':
+									projectStatus.html('<span style="font-weight:bold; color:#D9534F;">创建失败</span>');
+									break;
+								default: break;
+							}
+						});
+					}else{
+						modalBody.html($('<p>'+result+'</p>'));
+						modalBody.scrollTop(modalBody[0].scrollHeight);
+					}
+				});
+			}, 1000);
+		});
+	}
+	
 	var showProjectDetail = function(id) {
 		$.get('project/detail/' + id).done(function(project) {
 			$.get('pages/cis/project-detail.html').done(function(data) {
@@ -89,7 +117,7 @@
 						projectStatus.html('<span style="font-weight:bold; color:#D9534F;">创建失败</span>');
 						break;
 					case 'INTEGRATION_TOOL':
-						projectStatus.html('<div class="progress progress-striped active" title="正在整合工具"><div class="progress-bar" style="width: 100%"></div></div>');
+						projectStatus.html('正在整合工具');
 						break;
 					default:
 						projectStatus.html(project.projectStatus);
