--- a/openci-platform-web/src/main/webapp/pages/cis/project-list.html
+++ b/openci-platform-web/src/main/webapp/pages/cis/project-list.html
@@ -76,33 +76,56 @@
 				$(this).remove();
 			});
 			var modalBody = dialog.find('.modal-body');
-			var resultLength = 0;
+			$.ajax({
+					type: 'GET',
+					url:'project/process/'+id,
+					async: false
+				}).done(function(data){
+					if(!data.result){
+						$.get('project/detail/' + id).done(function(project) {
+							var projectStatus = $('#projectGrid').find('#projectStatus'+id).closest('td');
+							switch(project.projectStatus) {
+								case 'SUCCESS':
+									projectStatus.html('<span class="glyphicon glyphicon-ok" style="color:#5CB85C;"></span>');
+									break;
+								case 'INTEGRATION_TOOL_FAILURE':
+									projectStatus.html('<span class="glyphicon glyphicon-remove" style="color:#D9534F;"></span>');
+									break;
+								default: break;
+							}
+						});
+						modalBody.html(data.msg);
+						modalBody.scrollTop(modalBody[0].scrollHeight);
+					}else{
+						modalBody.html(data.msg);
+						modalBody.scrollTop(modalBody[0].scrollHeight);
+					}
+			});
 			var intervalId = setInterval(function(){
 				$.ajax({
 					type: 'GET',
 					url:'project/process/'+id,
-					async: false,
-					dataType: 'text'
-				}).done(function(result){
-					console.info(resultLength == result.length)
-					if(resultLength == result.length){
+					async: false
+				}).done(function(data){
+					if(!data.result){
 						clearInterval(intervalId);
 						$.get('project/detail/' + id).done(function(project) {
 							var projectStatus = $('#projectGrid').find('#projectStatus'+id).closest('td');
 							switch(project.projectStatus) {
 								case 'SUCCESS':
-									projectStatus.html('<span style="font-weight:bold; color:#5CB85C;">创建成功</span>');
+									projectStatus.html('<span class="glyphicon glyphicon-ok" style="color:#5CB85C;"></span>');
 									break;
 								case 'INTEGRATION_TOOL_FAILURE':
-									projectStatus.html('<span style="font-weight:bold; color:#D9534F;">创建失败</span>');
+									projectStatus.html('<span class="glyphicon glyphicon-remove" style="color:#D9534F;"></span>');
 									break;
 								default: break;
 							}
 						});
-					}else{
-						modalBody.html(result);
+						modalBody.html(data.msg);
 						modalBody.scrollTop(modalBody[0].scrollHeight);
-						resultLength = result.length;
+					}else{
+						modalBody.html(data.msg);
+						modalBody.scrollTop(modalBody[0].scrollHeight);
 					}
 				});
 			}, 2000);
